examples/qdnevpt/slurm_out/eigen_analysis_test_9355933.out
----
Job started at Mon May 11 02:35:56 PM EDT 2026
----
This job is working on compute node c0325.ten.osc.edu
Running "module reset". Resetting modules to system default. The following $MODULEPATH directories have been removed: None
----
Running  script: test
Traceback (most recent call last):
  File "/users/PAS1583/bpickett/programs/prism_env/prism/examples/qdnevpt/test.py", line 14, in <module>
    import prism.nevpt
  File "/users/PAS1583/bpickett/programs/prism_env/prism/nevpt/__init__.py", line 23, in <module>
    from prism.nevpt import qd_nevpt
  File "/users/PAS1583/bpickett/programs/prism_env/prism/nevpt/qd_nevpt.py", line 508
    print("qd_at_ref shape", qd_at_ref.shape")
                                            ^
SyntaxError: unterminated string literal (detected at line 508)
----
Job ended at Mon May 11 02:35:58 PM EDT 2026
Total Walltime: 00:00:02
----
